--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "next": "^12.1.6",
     "react": "18.1.0",
+    "react-alice-carousel": "^2.6.1",
     "react-dom": "18.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
